# Cache-simulator

./: .gitignore  CMakeLists.txt  Readme.md
data/: config.txt  test.txt  test_capacity.txt  test_conflict.txt  test_lru.txt  test_prefetch_rand.txt  test_prefetch_seq.txt  test_writeback.txt  trace_cache_friendly.txt  trace_cache_unfriendly.txt  trace_random.txt  trace_rw_mixed.txt  trace_sequential.txt
src/: Cache.cpp  Cache.h  CacheLevel.cpp  CacheLevel.h  MemoryTrace.cpp  MemoryTrace.h  MultilevelCache.cpp  MultilevelCache.h  main.cpp
